# Learning

./: README.md
Matlab/ConfMatrix/: example_confMat.m  my_matPlot.m
OpenCV-Examples/ConversionArmaOpenCV/: CMakeLists.txt  convert.cpp
OpenCV-Examples/DistanceTransform/: CMakeCache.txt  CMakeLists.txt  distanceTransform.m  distrans.cpp  my_distTransform.cpp  my_distTransform2.cpp
OpenCV-Examples/HumanDetector/: CMakeCache.txt  CMakeLists.txt  PeopleDetection.cpp
OpenCV-Examples/My_svm_toydata/: CMakeLists.txt  datos_prueba_svm.m  multi_svm.cpp  toysvm_multi_RBF
OpenCV-Examples/OpenCVSampleOpticalFlow/: CMakeLists.txt
OpenCV-Examples/OpticalExampleStanford/: CMakeLists.txt  optical_flow_demo.cpp
OpenCV-Examples/ReadVideo_positionX/: CMakeLists.txt  read_video.cpp
OpenCV-Examples/creating_video/: CMakeCache.txt  CMakeLists.txt  video-write.cpp
OpenCV-Examples/findHomography/: CMakeLists.txt  SURF_Homography.cpp
OpenCV-Examples/ransac/: CMakeLists.txt  ransac_video.cpp
OpenCV-Examples/readVideo/: CMakeLists.txt  play_video.cpp
OpenCV-Examples/shift-example/: CMakeLists.txt  shift-image.cpp  shift-image_2.cpp  shift-image_3.cpp
OpenCV-Examples/svm_example/: CMakeLists.txt  svm_example.cpp
OpenMP/: HelloWorld.cpp  exer_2.cpp  exer_2_omp.cpp  exer_2_omp_2.cpp  exer_2_omp_PDFsolution.cpp
arma_examples/: Projection_Kernel.cpp  error_savingfield.cpp  gmm_arma.cpp  howtofill_field.cpp  my_model.gmm  my_pca_matlab.m  pca.cpp  person18.txt  saving_field_cube.cpp  saving_txt.cpp  std_data.cpp  unique_rand_numbers.cpp
arma_examples/hdf5/: A.h5  (+2 more)
svm_kernels/: compute_kernel_svm_2.m  dist_g.m  test_1.m  test_2.m
(+10 files in other folders)
