cmake_minimum_required(VERSION 2.8)
project(ransac)
#set(CMAKE_BUILD_TYPE Release)
find_package( OpenCV REQUIRED)
find_package( Armadillo REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -pedantic -fopenmp")
add_executable( run_ransac.exe ransac_video.cpp)
target_link_libraries( run_ransac.exe ${OpenCV_LIBS} -larmadillo)
